added jmh benchmarks